app/assets/stylesheets/application.css
/* ... */
li input.comment_folder_button {
	display: none;
}
li .comment_folder {
	display: inline-block;
	font-size: 9pt;
	color: #aaa;
	letter-spacing: 0.1em;
	width: 1.5em;
 	cursor: pointer;
	float: left;
	text-align: center;
	margin-right: -0.3em;
}
li .comment_folder.comment_folder_inline {
	display: none;
}
li .comment_folder:before {
	content: "[-]";
}
li .comment_folder_button:checked ~ .comment .comment_folder:before {
	content: "[+]";
}
li .comment_folder_button:checked ~ div.comment div.comment_text {
 	display: none;
}
li .comment_folder_button:checked ~ div.comment div.voters {
	visibility: hidden;
	margin-bottom: -15px;
}
li .comment_folder_button:checked ~ ol.comments ol,
li .comment_folder_button:checked ~ ol.comments div.comment,
li .comment_folder_button:checked ~ ol.comments li {
 	display: none;
}

li.comments_subtree {
	position: relative;
	overflow: hidden;
}

li .comment_parent_tree_line {
	position: absolute;
	left: 54px;
	height: 100%;
	border-left: 1px dotted #bbb;
	top: 30px;
}
li .comment_parent_tree_line.score_shown {
	top: 44px;
}
li .comment_parent_tree_line.can_downvote {
	top: 56px;
}
li .comment_siblings_tree_line {
	position: absolute;
	left: 28px;
	height: 100%;
	border-left: 1px dotted #bbb;
	top: 2em;
}
li:last-child > .comment_siblings_tree_line {
	border-left-color: transparent;
}

/* try to force a highlighted comment to stay visible */
div.comment:target div.comment_text,
div.comment:target div.voters {
	display: block !important;
}

li .byline {
	color: #888;
	font-size: 9.5pt;
}
li .byline > img.avatar {
	margin-bottom: -5px;
}
li .byline img.avatar {
	border-radius: 8px;
	height: 16px;
	margin-bottom: 2px;
	margin-right: 2px;
	vertical-align: middle;
	width: 16px;
}
li.story .byline {
	margin-top: 1px;
}
li.story span.byline {
	margin-left: 0.5em;
}
li .byline a {
	color: #888;
	text-decoration: none;
}
/* preserve selection made elsewhere when clicking */
li .byline a.comment_replier {
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
span.new_user, a.new_user,
li .byline a.new_user {
	color: green;
}
span.inactive_user, a.inactive_user,
li .byline a.inactive_user {
	color: gray;
	text-decoration: line-through;
}
span.user_is_author, a.user_is_author,
li .byline a.user_is_author {
	color: #6081bd;
}
li .byline a.story_has_suggestions {
	color: #6081bd;
}

li.story.hidden {
	opacity: 0.25;
}
ol.show_hidden li.story.hidden {
	opacity: 1.0 !important;
}
li.story.saved a.saver {
	color: green;
}

li.story.expired {
	opacity: 0.6;
}
li.story.expired a {
	color: gray !important;
}

li div.details,
div.story_content {
	margin-left: 40px;
	margin-right: 40px;
}

div.story_content {
	margin-bottom: 1em;
}
ol.stories.list div.story_content {
	color: #777;
	max-height: 2.6em;
	margin: 0.25em 40px 0.25em 0;
	overflow: hidden;
	text-overflow: clip;
}

div.morelink {
	float: left;
}

div.morelink,
div.page_link_buttons {
	margin-top: 1.5em;
	margin-left: 40px;
}
div.morelink a {
	color: #666;
	font-weight: bold;
	text-decoration: none;
}
div.page_link_buttons {
	font-weight: bold;
	margin-top: 2em;
}
div.page_link_buttons a,
div.page_link_buttons span {
	border: 1px solid #d0d0d0;
	background-color: #f3f3f3;
	color: #666;
	padding: 0.25em 0.5em;
	font-weight: bold;
	text-decoration: none;
	margin-left: 0.5em;
}
div.page_link_buttons a.cur,
div.page_link_buttons span {
	background-color: transparent;
	border-color: transparent;
	margin-left: 0.25em;
	padding-right: 0.25em;
}


div.story_text {
	margin-bottom: 1.5em;
	max-width: 700px;
	word-wrap: break-word;
}
div.story_text p {
	margin: 0.75em 0;
}
div.story_text img {
	max-width: 100%;
}

div#collapsed_story_text {
	display: none;
}
a#story_text_expander {
	display: block;
}

div.comment_text {
	font-size: 10.5pt;
	max-width: 700px;
	word-wrap: break-word;
	float: left;
}

div.comment_text blockquote,
div.markdown_help blockquote,
div.story_text blockquote {
	font-style: italic;
	margin: 0.25em 0 0 0.5em;
	padding: 0 0 0 1em;
	border-left: 2px solid gray;
}
div#collapsed_story_text div.story_text blockquote {
	font-style: normal;
}
div.comment_text pre,
div.markdown_help pre {
	margin-left: 1em;
}
div.comment_text ol {
	margin: 0;
	padding: 0 1.5em;
}
div.comment_text ol li {
	padding: 0 !important;
	margin: 0 !important;
}

div.comment_text p {
	margin: 0.5em 0;
}
div.comment_text p:first-child {
	margin-top: 0.3em;
}

div.comment_text code {
	line-height: 1.2em;
}

a.pagelink {
	border: 1px solid #ddd;
	background-color: #fbfbfb;
	padding: 4px 8px;
}
a.pagelink.curpage {
	border: 1px solid gray;
	background-color: white;
	font-weight: bold;
}


#downvote_why {
	position: absolute;
	width: 100px;
	border: 1px solid #ccc;
	border-bottom: 0;
	z-index: 2;
}
#downvote_why a {
	background-color: white;
	color: #555;
	border-bottom: 1px solid #ccc;
	display: block;
	padding: 3px;
	font-size: 9pt;
}
#downvote_why a:hover {
	background-color: #eee;
}
#downvote_why a.cancelreason {
	background-color: #eee;
	font-size: 8pt;
}

#downvote_why_shadow {
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	z-index: 1;
}


div.markdown_help {
	background-color: #f4f4f4;
	border: 1px solid #e0e0e0;
	padding: 0 1em;
	margin-top: 0.5em;
}

div.markdown_help_label {
	float: right;
	font-size: 9pt;
	line-height: 2em;
	color: #aaa;
	text-decoration: underline;
	cursor: pointer;
}

.comment .preview {
	padding-left: 12px;
}

div#story_preview {
	margin-top: 2em;
	margin-left: 3.5em;
}

div#story_box input#story_url {
	width: 508px;
}
div#story_box button#story_fetch_title {
	padding-top: 1px;
	padding-bottom: 1px;
}
div#story_box input#story_title,
div#story_box input#story_moderation_reason,
div#story_box input#story_merge_story_short_id {
	width: 600px;
}
div#story_box #story_tags_a {
	width: 624px;
}
div#story_box textarea {
	width: 600px;
}
div#story_box div.actions {
	margin-left: 7em;
	width: 610px;
}
/* ... */

